# scrapping-mercado

./: .env  .gitignore  README.md  main.py  pyproject.toml  rodar_testes.bat  rodar_testes.ps1
src/bots/bot_1/: README.md  bot.py
src/bots/bot_1/apps/: extrabom_web.py
src/bots/bot_2/: README.md  bot.py
src/bots/bot_2/apps/: perim_web.py
src/common/configs/: env.py
src/common/schemas/: produto_mercado_schema.py
src/common/utils/: __init__.py  criar_webdriver.py  variavel_ambiente.py
tests/: conftest.py
tests/unit/: test_main.py
tests/unit/bots/bot_1/: test_bot.py
tests/unit/bots/bot_1/apps/: test_extrabom_web.py
tests/unit/bots/bot_2/: test_bot.py
tests/unit/bots/bot_2/apps/: test_perim_web.py
tests/unit/common/configs/: test_env.py
tests/unit/common/schemas/: test_produto_mercado_schema.py
tests/unit/common/utils/: test_criar_webdriver.py  test_utils_init.py  test_variavel_ambiente.py
